--- a/20220222AI開発ハンズオン.ipynb
+++ b/20220222AI開発ハンズオン.ipynb
@@ -478,7 +478,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "APIキーとAPIシークレットを変数に入れておきます。実行する前に YOUR_FLICKR_KEY と YOUR_FLICKR_SECRET を、キッチンで取得した API キーとシークレットに置き換えてください。\n",
+        "APIキーとAPIシークレットを変数に入れておきます。実行する前に YOUR_FLICKR_KEY と YOUR_FLICKR_SECRET を、先ほど取得した API キーとシークレットに置き換えてください。\n",
         "\n",
         "各乗り物の画像を100件ずつ取得します。"
       ],
